Changed more deprecated usages of the Double class.